--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 </head>
-<body style="display:flex; width:100vw; height:100vh; justify-content: center; align-items: center; margin:none; padding:none">
+<body style="display:flex; width:100vw; height:100vh; justify-content: center; align-items: center; margin:none; padding:none;overflow:none">
 	<div style="width:40%;height:auto;">
 		<h1 style="text-align:center; font-size:14px;">
 			lorem ipsum
