--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE HTML> 
-<html>
+<html style="overflow:hidden">
 <head>
-
+<title>PULT.ru</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="display:flex; width:100vw; height:100vh; justify-content: center; align-items: center; margin:none; padding:none;overflow:hidden">
+<body style="display:flex; width:100vw; height:100vh; justify-content: center; align-items: center; margin:none; padding:none;">
 	<div style="width:40%;height:auto;">
 		<h1 style="text-align:center; font-size:14px;">
 			lorem ipsum
